--- a/Adaboost_demo_.ipynb
+++ b/Adaboost_demo_.ipynb
@@ -2778,7 +2778,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df2=df1.iloc[index3,[0,1,2,3]]"
+    "df2=df.iloc[index3,[0,1,2,3]]"
    ]
   },
   {
